# PTSD-Brain_it_On

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  PROPOSAL.md  README.md  files.cmake  screenshot.patch
.github/workflows/: release.yml
PTSD/include/Core/: Context.hpp
PTSD/src/Core/: Context.cpp
docs/: App.md  Box2D-v2-to-v3-mapping.md  README.md  plan-box2d-v3.1.1.prompt.md  plan-levelHudStrokeLimit.prompt.md
docs/GameWorld/: BaseObject.md  Boundary.md  Capsule.md  Circle.md  CompositeObject.md  CoordinateHelper.md  DrawingIndicator.md  DrawnObject.md  MagnetObject.md  PhysicalWorld.md  Rectangle.md  Shape.md
docs/Level/: Level.md  LevelData.md  LevelHUD.md
docs/Level/PassCondition/: OneToOneContactPass.md  PassCondition.md
docs/Progress/: ProgressStore.md
docs/Screen/: Button.md  GameScreen.md  LobbyScreen.md  MenuScreen.md  ResultScreen.md  SettingsScreen.md  UIElement.md  UIScreen.md
include/: App.hpp  CoordinateHelper.hpp  DrawnObject.hpp  GameScreen.hpp  Level.hpp  LevelData.hpp  LevelManager.hpp  LobbyScreen.hpp  MenuScreen.hpp  PassCondition.hpp  PhysicalObject.hpp  PhysicsWorld.hpp  SettingsScreen.hpp  UIManager.hpp  UIScreen.hpp
include/GameWorld/: BaseObject.hpp  CompositeObject.hpp  CompoundObject.hpp  CoordinateHelper.hpp  DrawingIndicator.hpp  DrawnObject.hpp  MagnetObject.hpp  PhysicalWorld.hpp  Physics.hpp
include/GameWorld/CompositeObject/: Boundary.hpp  CompositeObject.hpp  DrawnObject.hpp  MagnetObject.hpp
include/GameWorld/Shape/: Capsule.hpp  Circle.hpp  Rectangle.hpp  Shape.hpp
include/Level/: Level.hpp  LevelData.hpp  LevelHUD.hpp  PassCondition.hpp
include/Level/PassCondition/: OneToOneContactPass.hpp  PassCondition.hpp
include/Physics/: CompoundPhysicalObject.hpp  CoordinateHelper.hpp  PhysicalCircle.hpp  PhysicalObject.hpp  PhysicalRectangle.hpp  Physics.hpp  PhysicsWorld.hpp
include/Progress/: ProgressStore.hpp
include/Screen/: Button.hpp  GameScreen.hpp  LobbyScreen.hpp  MenuScreen.hpp  ResultScreen.hpp  SettingsScreen.hpp  UIElement.hpp  UIScreen.hpp  UITemplate.hpp
src/: App.cpp  DrawnObject.cpp  GameScreen.cpp  Level.cpp  LevelData.cpp  LevelManager.cpp  LobbyScreen.cpp  MenuScreen.cpp  PassCondition.cpp  PhysicalObject.cpp  PhysicsWorld.cpp  SettingsScreen.cpp  UIManager.cpp
src/GameWorld/: BaseObject.cpp  CompositeObject.cpp  CompoundObject.cpp  DrawingIndicator.cpp  DrawnObject.cpp  Example.cpp  MagnetObject.cpp  PhysicalWorld.cpp  Physics.cpp
src/GameWorld/CompositeObject/: Boundary.cpp  CompositeObject.cpp  DrawnObject.cpp
src/GameWorld/Shape/: Capsule.cpp  Circle.cpp  Rectangle.cpp  Shape.cpp
src/Level/: Level.cpp  LevelData.cpp  LevelHUD.cpp  PassCondition.cpp
src/Level/LevelData/: Level1.cpp  Level2.cpp  Level3.cpp
src/Level/PassCondition/: OneToOneContactPass.cpp  PassCondition.cpp
src/Physics/: CompoundPhysicalObject.cpp  PhysicalCircle.cpp  PhysicalObject.cpp  PhysicalRectangle.cpp  PhysicsWorld.cpp
src/Progress/: ProgressStore.cpp
src/Screen/: Button.cpp  GameScreen.cpp  LobbyScreen.cpp  MenuScreen.cpp  ResultScreen.cpp  SettingsScreen.cpp  UIElement.cpp  UITemplate.cpp
